HeaderNavItem: Fix sometimes flashing reveal with timeout and clarify code. Header: Fix mobile links visibility.

--- a/components/Header/_Header.scss
+++ b/components/Header/_Header.scss
@@ -430,7 +430,7 @@
   text-align: right;
 
   @include mq(m) {
-    .Header-links {
+    .Header-footer-links {
       display: none;
     }
   }
